--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -9,11 +9,9 @@ Pagina principal del sistema Jordan.
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets">
-    <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Jordan</title>
-    </h:head>
-    <h:body>
-        <div>TODO write content</div>
-    </h:body>
+    <ui:composition template="/Plantillas/user.xhtml">
+        <ui:define name="content">
+            
+        </ui:define>
+    </ui:composition>
 </html>
