--- a/src/main/webapp/local.xhtml
+++ b/src/main/webapp/local.xhtml
@@ -120,8 +120,8 @@ Pagina que muestra la información de un local.
                         <p:outputLabel value="#{_comentario.usuario.usuario}" />
                         <p:outputLabel value="#{_comentario.comentario}" />
                         <p:commandButton rendered="#{controladorSesión.administrador}" update=":publicacion @form"
-                                         actionListener="#{controladorLocal.eliminarComentario(_comentario)}"
-                                         value="Borrar" style="width: 100px; float: right; margin-right: 10%"/>
+                                         action="local" actionListener="#{controladorLocal.eliminarComentario(_comentario.usuario)}" 
+                            value="Borrar" style="width: 100px; float: right; margin-right: 10%"/>
                     </p:panelGrid>
                 </p:dataScroller>
             </h:form><br/>
