--- a/src/main/webapp/local.xhtml
+++ b/src/main/webapp/local.xhtml
@@ -21,7 +21,7 @@ Pagina que muestra la información de un local.
                     PF('map').addOverlay(marker);
                 };
             </script>
-            <h:graphicImage width="90%" height="100%"
+            <h:graphicImage width="100%" height="100%"
                             rendered="#{controladorLocal.local.imagen ne null}"
                             value="data:image/png;base64,#{controladorLocal.local.imagenUrl}"/>
             <p:dataTable value="#{controladorLocal.local.transportes}" var="_transporte"
@@ -102,7 +102,7 @@ Pagina que muestra la información de un local.
                                      value="#{controladorLocal.comentario.comentario}"/>
                 </h:panelGrid>
                 <p:commandButton 
-                    value="Publicar" update=":publicacion @form" ajax="true" style="float: left"
+                    value="Publicar" update=":publicacion @form" ajax="false" style="float: left"
                     actionListener="#{controladorLocal.guardarComentario()}"
                     />
                 <!--p:commandButton 
