--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -44,11 +44,11 @@ Pagina principal del sistema Jordan.
                 </p:accordionPanel>
             </h:form>
             
-            <p:dataTable value="#{controladorUsuario.usuarios}" var="_usuario">
-                <p:column>#{_usuario.usuario}</p:column>
-                <p:column>#{_usuario.contraseña}</p:column>
-                <p:column>#{_usuario.privilegio}</p:column>
-            </p:dataTable>
+            <!--p:dataTable value="{controladorUsuario.usuarios}" var="_usuario">
+                <p:column>{_usuario.usuario}</p:column>
+                <p:column>{_usuario.contraseña}</p:column>
+                <p:column>{_usuario.privilegio}</p:column>
+            </p:dataTable-->
             
         </ui:define>
     </ui:composition>
