--- a/src/main/webapp/busqueda.xhtml
+++ b/src/main/webapp/busqueda.xhtml
@@ -13,7 +13,7 @@ Pagina que muestra el resultado de la busqueda.
         <ui:define name="content">
             
             <h:form>
-                <h3 style="width: 90%;margin-left: 5%; font-size: 20pt">Top 5</h3>
+                <h3 style="width: 90%;margin-left: 5%; font-size: 20pt">Resultados de la búsqueda</h3>
                 <p:accordionPanel activeIndex="0,1,2,3,4" multiple="true" style="width: 90%;margin-left: 5%"
                                   value="#{controladorLocal.top5}" var="_local" >
                     <p:tab title="" >
