--- a/src/main/webapp/busqueda.xhtml
+++ b/src/main/webapp/busqueda.xhtml
@@ -15,7 +15,7 @@ Pagina que muestra el resultado de la busqueda.
             <h:form>
                 <h3 style="width: 90%;margin-left: 5%; font-size: 20pt">Resultados de la búsqueda</h3>
                 <p:accordionPanel activeIndex="0,1,2,3,4" multiple="true" style="width: 90%;margin-left: 5%"
-                                  value="#{controladorLocal.top5}" var="_local" >
+                                  value="#{controladorLocal.resultados}" var="_local" >
                     <p:tab title="" >
                         <h:panelGrid columns="2" width="20%" style="float: left">
                             <p:outputLabel value="#{controladorLocal.posición}" 
