--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -30,7 +30,7 @@ Pagina principal del sistema Jordan.
                         <h:panelGrid columns="1" width="80%" style="float: right; left: 5%">
                             <h:panelGrid columns="2" width="100%">
                                 <p:commandLink ajax="false" action="local" 
-                                               value="#{_local.nombre} (#{_local.alias})"
+                                               value="#{_local.nombre} (#{_local.alias}) #{_local.lugar.nombre}"
                                                actionListener="#{controladorLocal.setLocal(_local)}"
                                                style="font-size: 14pt"/>
                                 <h:panelGrid columns="2" >
