--- a/src/main/webapp/Plantillas/user.xhtml
+++ b/src/main/webapp/Plantillas/user.xhtml
@@ -22,7 +22,8 @@
                         <p:menuitem>
                             <p:selectOneMenu value="#{controladorLocal.opciónDeBúsqueda}" 
                                              style="margin: 7pt">
-                                <f:selectItem itemLabel="Categoría de Búsqueda" itemValue=""/>
+                                <f:selectItem itemLabel="Categoría de Búsqueda" itemValue=""
+                                              noSelectionOption="true" />
                                 <f:selectItem itemLabel="Comida" itemValue="Comida" />
                                 <f:selectItem itemLabel="Local" itemValue="Local" />
                                 <f:selectItem itemLabel="Lugar" itemValue="Lugar" />
