Falta busqueda abanzada, publicaciones en resdes dociales, y seleccion de top 5

--- a/src/main/webapp/Plantillas/user.xhtml
+++ b/src/main/webapp/Plantillas/user.xhtml
@@ -21,7 +21,7 @@
                         <p:menuitem value="INICIO" url="../jordan" style="margin: 10pt"/>
                         <p:menuitem>
                             <p:selectOneMenu value="#{controladorLocal.opciónDeBúsqueda}" 
-                                             style="margin: 7pt">
+                                             style="margin: 7pt" required="true">
                                 <f:selectItem itemLabel="Categoría de Búsqueda" itemValue=""
                                               noSelectionOption="true" />
                                 <f:selectItem itemLabel="Comida" itemValue="Comida" />
