--- a/src/main/webapp/local.xhtml
+++ b/src/main/webapp/local.xhtml
@@ -48,7 +48,7 @@ Pagina que muestra la información de un local.
                                (#{controladorLocal.local.alias})" />
                 <h:panelGrid columns="2" >
                     <p:outputLabel value="Puntuación:"/>
-                    <p:rating value="#{controladorLocal.local.calificación}" readonly="true"/>
+                    <p:rating value="#{controladorLocal.local.evaluación}" readonly="true"/>
                 </h:panelGrid>
             </h:panelGrid><br/>
             <h:panelGrid columns="1" width="100%">
