Falta busqueda abanzada, publicaciones en resdes dociales, y que el top 5 regrese solo 5 locales

--- a/src/main/webapp/busqueda.xhtml
+++ b/src/main/webapp/busqueda.xhtml
@@ -35,7 +35,7 @@ Pagina que muestra el resultado de la busqueda.
                                                style="font-size: 14pt"/>
                                 <h:panelGrid columns="2" >
                                     <p:outputLabel value="Puntuación:" style="font-size: 15pt"/>
-                                    <p:rating value="#{_local.calificación}" readonly="true"/>
+                                    <p:rating value="#{_local.evaluación}" readonly="true"/>
                                 </h:panelGrid>
                             </h:panelGrid>
                             <p style="font-size: 14pt">#{_local.descripción}</p>
