Falta busqueda abanzada, publicaciones en resdes dociales

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -30,7 +30,7 @@ Pagina principal del sistema Jordan.
                         <h:panelGrid columns="1" width="80%" style="float: right; left: 5%">
                             <h:panelGrid columns="2" width="100%">
                                 <p:commandLink ajax="false" action="local" 
-                                               value="#{_local.nombre} (#{_local.alias}) #{_local.calificación}"
+                                               value="#{_local.nombre} (#{_local.alias})"
                                                actionListener="#{controladorLocal.setLocal(_local)}"
                                                style="font-size: 14pt"/>
                                 <h:panelGrid columns="2" >
@@ -38,7 +38,7 @@ Pagina principal del sistema Jordan.
                                     <p:rating value="#{_local.evaluación}" readonly="true"/>
                                 </h:panelGrid>
                             </h:panelGrid>
-                            <p style="font-size: 14pt">#{_local.descripción}</p>
+                            <p style="font-size: 14pt">#{_local.información}</p>
                         </h:panelGrid>
                     </p:tab>
                 </p:accordionPanel>
