--- a/src/main/webapp/local.xhtml
+++ b/src/main/webapp/local.xhtml
@@ -81,7 +81,7 @@ Pagina que muestra la información de un local.
                 <f:facet name="header">
                     <p:column>Descripción</p:column>
                 </f:facet>
-                <h:outputText value="#{controladorLocal.local.descripción}"/>
+                <h:outputText value="#{controladorLocal.local.información}"/>
             </p:panelGrid><br/>
             <h:form id="Coment" rendered="#{controladorLocal.sesionIniciada(controladorSesión)}">      
                 <h:panelGrid id="edicion" columns="1" width="100%">
