--- a/src/main/webapp/local.xhtml
+++ b/src/main/webapp/local.xhtml
@@ -97,8 +97,7 @@ Pagina que muestra la información de un local.
                 </h:panelGrid>
                 <p:commandButton 
                     value="Publicar" update=":publicacion @form" ajax="true" style="float: left"
-                    actionListener="#{controladorLocal.guardarComentario()}"
-                    onsuccess="PF('redes').show();"/>
+                    onsuccess="PF('redes').show();" actionListener="#{controladorLocal.guardarComentario()}"/>
                 <br/><br/>
             </h:form><br/>
             <h:form id="publicacion" style="width: 100%">
@@ -120,14 +119,15 @@ Pagina que muestra la información de un local.
                     <h:panelGrid columns="2" cellpadding="10">
                         <p:commandLink onclick="publicaMensaje($('textarea[id=&quot;Coment:comentario&quot;]')[0].value)" >
                             <p:graphicImage library="imag" name="facebook.png" width="100" height="100"/>
-                        </p:commandLink>
-                        <p:commandLink>
+                        </p:commandLink >
+                        <p:commandLink onclick="redireccionar($('textarea[id=&quot;Coment:comentario&quot;]')[0].value)">
                             <p:graphicImage library="imag" name="twitter.png" width="100" height="100" />
                         </p:commandLink>
                     </h:panelGrid>
                     <br/>
                     <h:form>
-                        <p:commandButton value="Continuar" onclick="PF('redes').hide();"/>
+                        <p:commandButton value="Continuar" 
+                                         onclick="PF('redes').hide();"/>
                     </h:form>
                 </div>
             </p:dialog>
